--- a/bank.ejb/.classpath
+++ b/bank.ejb/.classpath
@@ -7,6 +7,7 @@
 		</attributes>
 	</classpathentry>
 	<classpathentry kind="con" path="org.eclipse.jst.j2ee.internal.module.container"/>
-	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
+	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-11"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/bank.ejbClient"/>
 	<classpathentry kind="output" path="build/classes"/>
 </classpath>
