--- a/bank.ws/.classpath
+++ b/bank.ws/.classpath
@@ -15,5 +15,7 @@
 	<classpathentry kind="con" path="org.eclipse.jst.j2ee.internal.web.container"/>
 	<classpathentry kind="con" path="org.eclipse.jst.j2ee.internal.module.container"/>
 	<classpathentry combineaccessrules="false" kind="src" path="/bank.ejbClient"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/bank.ejb"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/bank.web"/>
 	<classpathentry kind="output" path="build/classes"/>
 </classpath>
