Added Authentication filter

--- a/bank.ws/WebContent/WEB-INF/web.xml
+++ b/bank.ws/WebContent/WEB-INF/web.xml
@@ -8,4 +8,12 @@
  	<servlet-name>javax.ws.rs.core.Application</servlet-name>
  	<url-pattern>/rest/*</url-pattern>
  </servlet-mapping>
+   <filter>
+    <filter-name>AuthenticationFilter</filter-name>
+    <filter-class>dk.eamv.bank.rest.RestAuthenticationFilter</filter-class>
+  </filter>
+  <filter-mapping>
+    <filter-name>AuthenticationFilter</filter-name>
+    <url-pattern>/rest/*</url-pattern>
+  </filter-mapping>
 </web-app>
