--- a/bank.ws/WebContent/WEB-INF/web.xml
+++ b/bank.ws/WebContent/WEB-INF/web.xml
@@ -9,11 +9,20 @@
  	<url-pattern>/rest/*</url-pattern>
  </servlet-mapping>
    <filter>
-    <filter-name>AuthenticationFilter</filter-name>
-    <filter-class>dk.eamv.bank.rest.RestAuthenticationFilter</filter-class>
+    <filter-name>EmployeeAuthenticationFilter</filter-name>
+    <filter-class>dk.eamv.bank.rest.filters.EmployeeAuthenticationFilter</filter-class>
   </filter>
   <filter-mapping>
-    <filter-name>AuthenticationFilter</filter-name>
-    <url-pattern>/rest/*</url-pattern>
+    <filter-name>EmployeeAuthenticationFilter</filter-name>
+    <url-pattern>/rest/employee/*</url-pattern>
+  </filter-mapping>
+  
+  <filter>
+    <filter-name>AdminAuthenticationFilter</filter-name>
+    <filter-class>dk.eamv.bank.rest.filters.AdminAuthenticationFilter</filter-class>
+  </filter>
+  <filter-mapping>
+    <filter-name>AdminAuthenticationFilter</filter-name>
+    <url-pattern>/rest/admin/*</url-pattern>
   </filter-mapping>
 </web-app>
